src/objects/Case/fields/Catalog_Product_Groups__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Product_Groups__c</fullName>
    <formula>TEXT( Supported_Products__r.Catalog_Product_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Product Groups</label>
    <type>Text</type>
</CustomField>