src/objects/Case/fields/CBT__c.field-meta.xml
<CustomField>
    <fullName>CBT__c</fullName>
    <formula>Text(Account.CBT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBT</label>
    <type>Text</type>
</CustomField>