src/objects/Case/fields/CBT_Team__c.field-meta.xml
<CustomField>
    <fullName>CBT_Team__c</fullName>
    <formula>Text(Account.CBT_Team__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBT Team</label>
    <type>Text</type>
</CustomField>