src/objects/Case/fields/CEC_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CEC_Case_Number__c</fullName>
    <description>Added as part of SF2SF project</description>
    <label>CEC Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>