src/objects/Case/fields/CEC_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CEC_Record_Type__c</fullName>
    <description>Added as part of SF2SF project</description>
    <label>CEC Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>