src/objects/Case/fields/CEE_Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>CEE_Touchpoints__c</fullName>
    <label>CEE Touchpoints</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adopt &amp; Use</fullName>
            </value>
            <value>
                <fullName>Affinity Level 2</fullName>
                <isActive>false</isActive>
                <label>Affinity Level 2</label>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refresh/ Advocacy</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>