src/objects/Case/fields/Certification_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Certification_Requirements__c</fullName>
    <label>Certification Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canadian GOV</fullName>
            </value>
            <value>
                <fullName>Direct Commercial</fullName>
            </value>
            <value>
                <fullName>FAR 12 Commercial</fullName>
            </value>
            <value>
                <fullName>FAR 15 (CIJ Response)</fullName>
            </value>
            <value>
                <fullName>FAR 15 Competitive</fullName>
            </value>
            <value>
                <fullName>FAR 15 TINA</fullName>
            </value>
            <value>
                <fullName>Foreign Military Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>