src/objects/Case/fields/CES_Score__c.field-meta.xml
<CustomField>
    <fullName>CES_Score__c</fullName>
    <label>ASAT</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>