src/objects/Case/fields/CH_EnhancementRequest__c.field-meta.xml
<CustomField>
    <fullName>CH_EnhancementRequest__c</fullName>
    <description>Modified as a part of NOKIASC-31162.Checking if Internal Status = Feature/Enhance Request then updating the value as YES, else NO</description>
    <formula>IF( ISPICKVAL(CH_InternalStatus__c, 
	&quot;Feature/Enhancement Request&quot;),
	  &quot;Yes&quot;,
   &quot;No&quot; )</formula>
    <label>Enhancement Request</label>
    <type>Text</type>
</CustomField>