src/objects/Case/fields/CH_EntitlementException__c.field-meta.xml
<CustomField>
    <fullName>CH_EntitlementException__c</fullName>
    <label>Entitlement Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Not Listed</fullName>
            </value>
            <value>
                <fullName>Covered Network Element Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>Covered Product Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>Entitlement Not Listed</fullName>
            </value>
            <value>
                <fullName>Entitlement Script Verification Required</fullName>
            </value>
            <value>
                <fullName>Entitlement Script Verified Manually</fullName>
            </value>
            <value>
                <fullName>In Warranty</fullName>
            </value>
            <value>
                <fullName>In Warranty PO Missing</fullName>
            </value>
            <value>
                <fullName>In Warranty - Quotation Required</fullName>
            </value>
            <value>
                <fullName>Network Element Asset Not Listed</fullName>
            </value>
            <value>
                <fullName>No Exception</fullName>
                <default>true</default>
                <label>No Exception</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Applicable - Quotation Required</fullName>
            </value>
            <value>
                <fullName>Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Out of Warranty Dispute</fullName>
            </value>
            <value>
                <fullName>Out of Warranty PO Missing</fullName>
            </value>
            <value>
                <fullName>Out of Warranty - Quotation Required</fullName>
            </value>
            <value>
                <fullName>Quote Declined</fullName>
            </value>
            <value>
                <fullName>Quote Expired</fullName>
            </value>
            <value>
                <fullName>Unknown Warranty Status</fullName>
                <isActive>false</isActive>
                <label>Unknown Warranty Status</label>
            </value>
            <value>
                <fullName>Warranty Status Check Failed</fullName>
            </value>
            <value>
                <fullName>Warranty Status Check Failed -Quotation Required</fullName>
            </value>
            <value>
                <fullName>Warranty Status Check Failed to Complete</fullName>
                <isActive>false</isActive>
                <label>Warranty Status Check Failed to Complete</label>
            </value>
            <value>
                <fullName>Warranty Unknown</fullName>
            </value>
            <value>
                <fullName>Warranty Unknown - Quotation Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>