src/objects/Case/fields/CH_MilestoneDetails__c.field-meta.xml
<CustomField>
    <fullName>CH_MilestoneDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is use to connect milestone object</description>
    <label>Milestone Details_DELETE</label>
    <referenceTo>Apttus_Config2__Milestone2__c</referenceTo>
    <relationshipLabel>Support Tickets</relationshipLabel>
    <relationshipName>Support_Tickets_Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>