src/objects/Case/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Update</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
            <value>
                <fullName>Parenting Change</fullName>
            </value>
            <value>
                <fullName>Market Details</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Expedite</fullName>
            </value>
            <value>
                <fullName>Push Out</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Cancel Line Item</fullName>
            </value>
            <value>
                <fullName>Shipping Address Change</fullName>
            </value>
            <value>
                <fullName>Shipping Method Change</fullName>
            </value>
            <value>
                <fullName>Missing/Incorrect Documentation</fullName>
            </value>
            <value>
                <fullName>Quantity Decrease</fullName>
            </value>
            <value>
                <fullName>L-3</fullName>
            </value>
            <value>
                <fullName>Universal</fullName>
            </value>
            <value>
                <fullName>L-3 + Universal</fullName>
            </value>
            <value>
                <fullName>Thales</fullName>
            </value>
            <value>
                <fullName>Thales+L3</fullName>
            </value>
            <value>
                <fullName>Thales+Universal</fullName>
            </value>
            <value>
                <fullName>L3+Universal+Thales</fullName>
            </value>
            <value>
                <fullName>MASCO</fullName>
            </value>
            <value>
                <fullName>VIASAT</fullName>
            </value>
            <value>
                <fullName>L3+MASCO</fullName>
            </value>
            <value>
                <fullName>L3+VIASAT</fullName>
            </value>
            <value>
                <fullName>L3+MASCO+VIASAT</fullName>
            </value>
            <value>
                <fullName>Universal+MASCO+VIASAT</fullName>
            </value>
            <value>
                <fullName>Universal+MASCO</fullName>
            </value>
            <value>
                <fullName>Universal+VIASAT</fullName>
            </value>
            <value>
                <fullName>Universal+L3+Thales+MASCO+VIASAT</fullName>
            </value>
            <value>
                <fullName>Universal+L3+Thales+MASCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>