src/objects/Case/fields/City_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Name__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>