src/objects/Case/fields/City_Town__c.field-meta.xml
<CustomField>
    <fullName>City_Town__c</fullName>
    <description>Created for AERO Training project : Used in Special Training Request Form</description>
    <label>City/Town</label>
    <length>50</length>
    <type>Text</type>
</CustomField>