src/objects/Case/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Repair</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Access Codes/SN</fullName>
            </value>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>Account Creation</fullName>
            </value>
            <value>
                <fullName>Account Issue</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Account Mgt Portal</fullName>
            </value>
            <value>
                <fullName>Accounts / Billing</fullName>
            </value>
            <value>
                <fullName>Account Support</fullName>
            </value>
            <value>
                <fullName>Account Updates</fullName>
            </value>
            <value>
                <fullName>Acct Update</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Activations</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>AeroWave</fullName>
            </value>
            <value>
                <fullName>AIRCRAFT</fullName>
            </value>
            <value>
                <fullName>Aircraft Sale</fullName>
            </value>
            <value>
                <fullName>Aircraft Transfer</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>AMDB</fullName>
            </value>
            <value>
                <fullName>AMI</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
            <value>
                <fullName>APAC ACT Internal</fullName>
            </value>
            <value>
                <fullName>APIS</fullName>
            </value>
            <value>
                <fullName>Application Error</fullName>
            </value>
            <value>
                <fullName>Arinc</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AT&amp;R (Tier 1)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>