src/objects/Case/fields/Closed_YTD__c.field-meta.xml
<CustomField>
    <fullName>Closed_YTD__c</fullName>
    <formula>IF(YEAR( DATEVALUE( ClosedDate ) ) = YEAR( TODAY()), &apos;True&apos; , &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed YTD</label>
    <type>Text</type>
</CustomField>