src/objects/Case/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Created for AERO Training project</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>