src/objects/Case/fields/Company_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_Address__c</fullName>
    <label>Company Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>