src/objects/Case/fields/Company_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Website_URL__c</fullName>
    <label>Company Website/URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>