src/objects/Case/fields/Concierge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concierge Customer</label>
    <type>Checkbox</type>
</CustomField>