src/objects/Case/fields/Conexiom__c.field-meta.xml
<CustomField>
    <fullName>Conexiom__c</fullName>
    <description>Displays only when Sub Class is &quot;Conexiom&quot;</description>
    <inlineHelpText>Opens only when Sub Class value is &quot;Conexiom&quot;</inlineHelpText>
    <label>Conexiom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSR Order Review</fullName>
            </value>
            <value>
                <fullName>CSR IDoc Review</fullName>
            </value>
            <value>
                <fullName>Conexiom Mapping Required</fullName>
            </value>
            <value>
                <fullName>Order Processed, Z1 PO Review Required</fullName>
            </value>
            <value>
                <fullName>Order Processed through Conexiom</fullName>
            </value>
            <value>
                <fullName>Order not Processed, Resolve MyEditor Alert</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>