src/objects/Case/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AL/Ex</fullName>
            </value>
            <value>
                <fullName>CSP/CSP Gold</fullName>
            </value>
            <value>
                <fullName>EMCPP</fullName>
            </value>
            <value>
                <fullName>HAPP</fullName>
            </value>
            <value>
                <fullName>ISS</fullName>
            </value>
            <value>
                <fullName>MPP</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MSP/MSP Gold</fullName>
            </value>
            <value>
                <fullName>SPEX</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Firm Fixed Price</fullName>
            </value>
            <value>
                <fullName>FFP - Level-Of-Effort</fullName>
            </value>
            <value>
                <fullName>FFP - Materials Reimbursement</fullName>
            </value>
            <value>
                <fullName>Fixed Price Contract With Economic Price Adjustment</fullName>
            </value>
            <value>
                <fullName>Fixed Price - Fixed Price Incentive</fullName>
            </value>
            <value>
                <fullName>Fixed Price - Redetermination</fullName>
            </value>
            <value>
                <fullName>Cost Reimbursement</fullName>
            </value>
            <value>
                <fullName>Cost-Plus Fixed Fee (CPFF)</fullName>
            </value>
            <value>
                <fullName>Cost-Plus Award Fee (CPAF)</fullName>
            </value>
            <value>
                <fullName>Cost-Plus Incentive Fee (CPIF)</fullName>
            </value>
            <value>
                <fullName>Indefinite Delivery</fullName>
            </value>
            <value>
                <fullName>Indefinite Delivery, Indefinite Qty (IDIQ)</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Time and Material (T&amp;M)</fullName>
            </value>
            <value>
                <fullName>Labor-Hours</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>NTE</fullName>
            </value>
            <value>
                <fullName>Unpriced Orders</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Standard Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>