src/objects/Case/fields/Contractor_Status__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Status__c</fullName>
    <label>Contractor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>