src/objects/Case/fields/Copy_Of_8130_Tag_if_available__c.field-meta.xml
<CustomField>
    <fullName>Copy_Of_8130_Tag_if_available__c</fullName>
    <label>Copy Of 8130 Tag (if available)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>