src/objects/Case/fields/Copy_Of_8130_Tag_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Copy_Of_8130_Tag_Issued_By__c</fullName>
    <label>Copy Of 8130 Tag Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>