src/objects/Case/fields/Created_From_Form__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will get update to true when the Case created from the any of Special training or Online training forms. Work flow will run and will sent notification email to the Case Owner</description>
    <label>Created From Form</label>
    <type>Checkbox</type>
</CustomField>