src/objects/Case/fields/CSM_Aircraft_Make__c.field-meta.xml
<CustomField>
    <fullName>CSM_Aircraft_Make__c</fullName>
    <label>Aircraft Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam</fullName>
            </value>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Boeing</fullName>
            </value>
            <value>
                <fullName>Bombardier</fullName>
            </value>
            <value>
                <fullName>Cessna</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Cirrus</fullName>
            </value>
            <value>
                <fullName>Commander</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Dornier</fullName>
            </value>
            <value>
                <fullName>Eclipse</fullName>
            </value>
            <value>
                <fullName>Embraer</fullName>
            </value>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>Fairchild Dornier</fullName>
            </value>
            <value>
                <fullName>Gippsland</fullName>
            </value>
            <value>
                <fullName>Grob</fullName>
            </value>
            <value>
                <fullName>Gulfstream</fullName>
            </value>
            <value>
                <fullName>Hawker Beechcraft</fullName>
            </value>
            <value>
                <fullName>Honeywell</fullName>
            </value>
            <value>
                <fullName>IAI</fullName>
            </value>
            <value>
                <fullName>IBIS</fullName>
            </value>
            <value>
                <fullName>Lancair</fullName>
            </value>
            <value>
                <fullName>Learjet</fullName>
            </value>
            <value>
                <fullName>MD Helicopters</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Piaggio</fullName>
            </value>
            <value>
                <fullName>Pilatus</fullName>
            </value>
            <value>
                <fullName>Piper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>