src/objects/Case/fields/CSM_Category__c.field-meta.xml
<CustomField>
    <fullName>CSM_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADSB Out</fullName>
            </value>
            <value>
                <fullName>AFTMKT Programs</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
            <value>
                <fullName>Availability/Delivery</fullName>
            </value>
            <value>
                <fullName>Cost of Parts</fullName>
            </value>
            <value>
                <fullName>Easy II Upgrade</fullName>
            </value>
            <value>
                <fullName>CRT to LCD Displays</fullName>
            </value>
            <value>
                <fullName>IFSD</fullName>
            </value>
            <value>
                <fullName>JetWave</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>LearJet 40/45</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overall Tech Support</fullName>
            </value>
            <value>
                <fullName>PrimusElite &amp; CDSR Upgrade</fullName>
            </value>
            <value>
                <fullName>Responsiveness</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Tech Publications</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>VOC</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Unscheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>