src/objects/Case/fields/CSM_CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>