src/objects/Case/fields/CSM_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CSM_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>