src/objects/Case/fields/CSM_Feedback_Case__c.field-meta.xml
<CustomField>
    <fullName>CSM_Feedback_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Case</label>
    <type>Checkbox</type>
</CustomField>