src/objects/Case/fields/CSM_Region__c.field-meta.xml
<CustomField>
    <fullName>CSM_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia/Pacific Rim</fullName>
            </value>
            <value>
                <fullName>EMEAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>