src/objects/Case/fields/CSM_Senior_Escalation__c.field-meta.xml
<CustomField>
    <fullName>CSM_Senior_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Escalation</label>
    <type>Checkbox</type>
</CustomField>